--- a/css/layout.css
+++ b/css/layout.css
@@ -1,5 +1,4 @@
 /* Fichero CSS para completar */
-/* Fichero CSS para completar */
 html {
     font-size: 10px;
     background-color: #a9a9a9;
@@ -53,6 +52,15 @@ html {
     height: 100px;
     background-color: #ff80ff;
     display: flex;
+    margin-bottom: 10px;
+  }
+  
+  nav a {
+    display: inline-block;
+    font-size: 2rem;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: black;
   }
   
   nav img {
@@ -83,4 +91,9 @@ html {
   aside {
     flex: 1;
     margin-left: 10px;
+    padding-right: 30px;
+  }
+  
+  aside li {
+    padding-bottom: 10px;
   }
